# kiwi

./: .gitignore  CMakeLists.txt  README.md
cmake/: kiwi.cmake
example/: CMakeLists.txt
example/src/: main.c
src/: main.c
